# TreeViz

./: .gitignore  .travis.yml  LICENSE  README.md  pytest.ini  requirements.txt  setup.cfg  temp.py
TreeViz/: __init__.py  setup.cfg  treeViz.py
TreeViz/src/: treeViz.py
TreeViz/tests/: test_treeViz.py
doc/: Design Specification.md
doc/Function Specifications/: index.md
doc/Function Specifications/treeviz/: displayscheme.md  index.md  treeViz.md
doc/html/src/: index.html
doc/html/src/treeviz/: displayscheme.html  index.html  treeViz.html
examples/: Prune.ipynb  Treeviz_Examples.ipynb  prune.py
html/src/: treeViz.html
src/: __init__.py
src/treeviz/: displayscheme.py  treeViz.py
tests/: test_displayscheme.py  test_treeViz.py
