[metadata]
name = treeviz
version = 0.0.3
author = Caleb Case
author_email = ccase20@uw.edu
description = Ligthweight visualization library for sklearn Decision Trees
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
extend-ignore=E203,E266,E401,E403,E501,E902,W503
per-file-ignores=__init__.py:F401